--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,6 @@
 h1. Installation
 
-@sudo gem install botanicus-rango@
+@sudo gem install botanicus-rango -s http://gems.github.com@
 
 h1. Documentation
 
