TODO moved to the roadmap, removed notes.txt, added link to the roadmap to README.

--- a/README.textile
+++ b/README.textile
@@ -8,6 +8,10 @@ h1. Documentation
 # "API Docs":http://api.rango-project.org
 # "Examples":http://github.com/botanicus/rango-examples
 
+h1. Rango Development
+
+# "Roadmap":http://bit.ly/1xIq67
+
 h1. Community
 
 # "Jabber MUC":rango@conf.netlab.cz
