Updated pagination plugin

--- a/lib/rango/contrib/pagination/README.textile
+++ b/lib/rango/contrib/pagination/README.textile
@@ -3,8 +3,8 @@ h1. About
 h1. Usage
 
 <pre>
-dependency "rango-haml"
-dependency "rango-pagination"
+require "haml"
+require "rango/contrib/pagination"
 </pre>
 
 <pre>
