--- a/CHANGELOG
+++ b/CHANGELOG
@@ -11,7 +11,7 @@
 
 = Version 0.0.4
 
-= Version 0.0.5
+= Version 0.1
   * [FEATURE] environments support
   * [FEATURE] installation without RubyGems
   * [FEATURE] Rip support
@@ -19,3 +19,4 @@
   * [FEATURE] Hooks for Rendering
   * [SPECS]   Integration with RunCodeRun.com
   * [SPECS]   All specs passing
+	* SimpleTemplater, RubyExts & CLI
