--- a/README.textile
+++ b/README.textile
@@ -20,5 +20,6 @@ h1. Documentation
 
 h1. Community
 
-* "Twitter":https://twitter.com/RangoProject
 * "Rango Blog":http://botanicus.github.com/rango
+* "Twitter":https://twitter.com/RangoProject
+* IRC: #rango at irc://irc.freenode.net
