--- a/lib/rango/contrib/pagination/TODO
+++ b/lib/rango/contrib/pagination/TODO
@@ -1,3 +1,2 @@
 Page.current is pretty bad idea
-Features should works
-Everything should be in Rango::Pagination ... or maybe Rango::Page? It will be better because it do not conflict with existing rango-pagination package
+Everything should be in Rango::Pagination
