--- a/README.textile
+++ b/README.textile
@@ -1,10 +1,10 @@
 h1. Installation via RubyGems
 
-* Daily builds: @gem install rango --pre@ _(Daily builds currently doesn't work, I'm going to fix it till end of this week.)_
+* Daily builds: @gem install rango --pre@
 * Stable version: @gem install rango@
 * JRuby: @jruby --1.9 -S gem install rango@
 
-_We were using option @--development@ for installing development dependencies, unfortunately Rack has Mongrel as a development dependency and Mongrel compilation fails on Ruby 1.9, so I put everything into normal dependencies for now._
+_Rango itself doesn't define any runtime dependencies, since you may want to use just a subset of Rango, i. e. just template layer. If you are using stack generator, you get @Gemfile@ with usual dependencies, so @gem bundle@ will take care about it._
 
 h1. Installation via "Rip":http://hellorip.com
 
