--- a/CHANGELOG
+++ b/CHANGELOG
@@ -34,7 +34,7 @@
   * ImplicitRendering and ExplicitRendering mixins for using locals
     vs. rendering in context of current controller instance
 
-= Version 0.1.2, 13/12/2009, 22651050ea20e2997a9e5d07c8a409eb8e5de4fe
+= Version 0.1.2, 13/12/2009
   * Sequel support
   * Project generator renamed to stack generator
   * Removed app and bigapp generators
@@ -45,7 +45,7 @@
   * Removed dependencies, since you can use whichever subset of Rango
   * There is Rango::Router.app instead of Project.router
 
-= Version 0.1.3, 22/12/2009,
+= Version 0.2.0, 24/12/2009
   * Sequel support
   * Logger is now configurable, you don't have to use any particular one
   * Rango doesn't depend on RubyExts anymore
