--- a/CHANGELOG
+++ b/CHANGELOG
@@ -59,3 +59,4 @@
   * Rango itself use bundler rather than git submodules
   * rake hooks will install task for removing whitespace in pre-commit hook, contributors should use it!
   * Template helpers can work with paths relative to current template via ./path.html resp. ../path.html. All other paths are relative to the template paths.
+  * Use simple-logger as a default logger or standar logger if the simple-logger isn't installed.
