Sequel pagination actually works

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -65,3 +65,6 @@
   * More inteligent environments handling, just use Rango.environment and it will detect the proper one from ENV["RACK_ENV"], RACK_ENV constant or it will defaults to development. Rango.environment=(environment) will set all these variables so everything will stay consistent.
   * MongoMapper supported in stack generator (rango create stack blog --orm=mongomapper)
   * Added Rango::StackController which is more complete than just basic Rango::Controller
+
+= Version 0.2.2
+  * Sequel support in contrib/pagination
