--- a/CHANGELOG
+++ b/CHANGELOG
@@ -68,3 +68,10 @@
 
 = Version 0.2.2
   * Sequel support in contrib/pagination
+
+= Version 0.2.3
+  * Experimental support for bundler 0.9
+  * Controller#redirect takes a block where you get the exception, so you can set headers etc
+  * [FIX] Cookies are passed into the redirect request
+  * [FIX] All non-http exceptions which occur in controller are captured and passed to rescue_http_error as a new instance of InternalServerError, except development environment where we want to get the Rack error screen.
+  * [FIX] Fixed encoding problem in messages. It's actually Rack fault, but hey.
