--- a/CHANGELOG
+++ b/CHANGELOG
@@ -78,3 +78,5 @@
 
 = Version 0.2.4
   * Removed all helpers, if you need some, use http://github.com/botanicus/helpers
+  * [FEATURE] Added rango/mailer with mail helper for sending e-mails
+  * Rango.root & Rango.media_path are now instances of Pathname rather than String
