--- a/CHANGELOG
+++ b/CHANGELOG
@@ -84,3 +84,8 @@
   * Ripple support in stack generator
   * Removed Erubis support, since it doesn't support <%= block(&block) %> so it's useless for us
   * Specs are green again
+
+= Version 0.2.5
+  * Conventional rendering mixin for high-level rendering methods like autorender
+  * Added RESTController class as a base class for REST controllers
+  * UrlHelper#url can work not just as url(:post, @post.id) but also as url(:post, @post)
